--- a/src/main/resources/templates/admin/manage-user.html
+++ b/src/main/resources/templates/admin/manage-user.html
@@ -42,7 +42,7 @@
         </tbody>
     </table>
 
-    <a href="/admin" class="btn-back">Quay lại Dashboard</a>
+    <a href="/admin" class="btn-back">Quay lại</a>
 </div>
 </body>
 </html>
