--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -11,6 +11,8 @@
     <div class="list-group">
         <a href="/admin/users" class="list-group-item list-group-item-action">Quản lý Người dùng</a>
         <a href="/admin/homestays" class="list-group-item list-group-item-action">Quản lý Homestay</a>
+        <a href="/admin/bookings" class="list-group-item list-group-item-action">Quản lý Booking</a>
+        <a href="/admin/categories" class="list-group-item list-group-item-action">Quản lý Danh mục</a>
     </div>
 </div>
 </body>
